--- a/partials/courses.students.html
+++ b/partials/courses.students.html
@@ -15,4 +15,5 @@
 		</div>
 		<button type="submit" class="btn btn-default">Submit</button>
 	</form>
+	<div sample-course course-name="History"></div>
 </div>
